<resources>
    <string name="app_name">aiMovie</string>
    <string name="title_activity_movie_list">MovieList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_adder">MovieAdder</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="plot">Plot</string>
    <string name="confirm">Confirm</string>
    <string name="enter_imdb_id">Enter IMDb ID</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="rent">Rent</string>
    <string name="movie_not_available">Sorry, movie not available</string>
    <string name="edit">Edit</string>
    <string name="title_activity_movie_info">MovieInfo</string>
    <string name="title_not_entered">You need to provide a title</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="sort_by">Sort by</string>
    <string name="action_edit">Edit</string>
    <string name="Add_stock">Add stock</string>
    <string name="minimum_stock">The minimum stock is 0</string>
    <string-array name="sorting_choices">
        <item>Title</item>
        <item>Director</item>
        <item>Year</item>
    </string-array>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="activity_user_info_name">activity_user_info_name</string>
    <string name="activity_user_info_appellidos">activity_user_info_apellido</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_biography">Biography</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_filmnoir">Film-Noir</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_musical">Musical</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_scifi">Sci-Fi</string>
    <string name="genre_sport">Sport</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="movie_already_added">Movie already added</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="all_movies">All movies</string>
    <string name="via_imdb">Via IMDb</string>
    <string name="manually">Manually</string>
</resources>
